# bernardbdas

./: .env.example  .gitignore  README.md  index.html  main.py  pyproject.toml
.github/workflows/: daily-update.yml
css/: cursor.css  styles.css
pages/: 404.html  deploy.html  design.html
rough/: schemas.txt
