[project]
name = "bernardbdas"
version = "0.1.0"
description = "GitHub Profile README generator with neofetch-style SVG stats cards"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "bernardbdas", email = "bernarddas1@gmail.com" }]
dependencies = [
    "dotenv>=0.9.9",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "types-python-dateutil>=2.9.0",
    "types-requests>=2.32.0,<2.34",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["main"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
